--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "node": ">=0.6.19"
   },
   "bugs": {
-    "url": "https://github.com/mccormicka/nodegatekeeper/issues"
+    "url": "https://github.com/mccormicka/nodeapimessage/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mccormicka/nodegatekeeper"
+    "url": "https://github.com/mccormicka/nodeapimessage"
   },
-  "homepage": "https://github.com/mccormicka/nodegatekeeper",
+  "homepage": "https://github.com/mccormicka/nodeapimessage",
   "readmeFilename": "README.md",
   "dependencies": {
     "mongoose": "~3.6.2",
     "mongoose-validator": "~0.2.1",
-    "validator": "~1.3.0"
+    "validator": "~1.3.0",
+    "nodelogger": "https://github.com/mccormicka/nodelogger/archive/master.tar.gz"
   },
   "devDependencies": {
     "mockgoose": "0.0.13",
