--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "nodelogger": "https://github.com/mccormicka/nodelogger/archive/master.tar.gz"
   },
   "devDependencies": {
-    "mockgoose": "0.0.13",
-    "jasmine-node": "~1.10.2"
+    "grunt": "0.4.1",
+    "mockgoose": "~0.0.16",
+      "jasmine-node": "https://github.com/mccormicka/jasmine-node/archive/exclusive-tests.tar.gz",
+    "grunt-contrib-watch": "0.3.1",
+    "grunt-contrib-jshint": "0.4.3",
+    "grunt-jasmine-node": "~0.1.0",
+    "supertest": "~0.8.0",
+    "express": "~3.4.0",
+    "express-partial-response": "~0.2.1"
   }
 }
