--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "mongoose": "~3.6.2",
     "mongoose-validator": "~0.2.1",
     "validator": "~1.3.0",
-    "nodelogger": "https://github.com/mccormicka/nodelogger/archive/master.tar.gz"
+    "bunyan": "~0.22.1"
   },
   "devDependencies": {
     "grunt": "0.4.1",
-    "mockgoose": "~0.2.2",
     "jasmine-node": "https://github.com/mccormicka/jasmine-node/archive/exclusive-tests.tar.gz",
     "grunt-contrib-watch": "0.3.1",
     "grunt-contrib-jshint": "0.4.3",
     "grunt-jasmine-node": "~0.1.0",
     "supertest": "~0.8.0",
     "express": "~3.4.0",
-    "express-partial-response": "~0.2.1"
+    "express-partial-response": "~0.2.1",
+    "mockgoose": "~1.0.6"
   }
 }
